--- a/newyear/style.css
+++ b/newyear/style.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Caveat';
-    src: url('../Caveat-Regular.woff2') format('woff2'),
-        url('../Caveat-Regular.woff') format('woff');
+    src: url('./Caveat-Regular.woff2') format('woff2'),
+        url('./Caveat-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -130,3 +130,4 @@ body {
     font-size: 2rem;
 
 }
+
