--- a/newyear/style.css
+++ b/newyear/style.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Caveat';
-    src: url('/Caveat-Regular.woff2') format('woff2'),
-        url('/Caveat-Regular.woff') format('woff');
+    src: url('./Caveat-Regular.woff2') format('woff2'),
+        url('./Caveat-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -131,4 +131,5 @@ body {
     margin-top: 2rem;
     color: #4b0082;
     font-size: 2rem;
+
 }
